--- a/index.html
+++ b/index.html
@@ -1,70 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>E-commercial Website using Bootstrap 5</title>
         <!-- Font awesome -->
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        />
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
         <!-- Themify font -->
         <link rel="stylesheet" href="css/themify-icons.css" />
         <!-- Boostrap 5.0.2 css -->
-        <link
-            rel="stylesheet"
+        <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css"
             integrity="sha512-usVBAd66/NpVNfBge19gws2j6JZinnca12rAe2l+d+QkLU9fiG02O1X8Q6hepIpr/EYKZvKx/I9WsnujJuOmBA=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- Custom css -->
         <link rel="stylesheet" href="css/style.css" />
         <!-- Responsive Css -->
         <link rel="stylesheet" href="css/responsive.css" />
     </head>
+
     <body data-bs-spy="scroll" data-bs-target=".navbar">
         <!-- Navigation section -->
         <section id="header">
             <nav class="navbar navbar-expand-lg bg-white fixed-top">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="images/logo.png" class="'img-fluid" alt="" />
+                        <img src="images/logo.png" class="'img-fluid" alt />
                     </a>
-                    <button
-                        class="navbar-toggler"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#navbarNav"
-                        aria-controls="navbarNav"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation"
-                    >
+                    <button class="navbar-toggler" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
                         <i class="fas fa-bars navbar-toggler-icon"></i>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a
-                                    class="nav-link active"
-                                    aria-current="page"
-                                    href="#home"
-                                    >Home</a
-                                >
+                                <a class="nav-link active" aria-current="page"
+                                    href="#home">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#products"
-                                    >Products</a
-                                >
+                                <a class="nav-link" href="#products">Products</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#special">Special</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#testimonials"
-                                    >Testimonials</a
-                                >
+                                <a class="nav-link" href="#testimonials">Testimonials</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#contact">Contact</a>
@@ -76,26 +60,16 @@
         </section>
         <!-- Home section -->
         <section id="home" class="home pt-5 overflow-hidden">
-            <div
-                id="carouselExampleIndicators"
-                class="carousel slide"
-                data-bs-ride="carousel"
-            >
+            <div id="carouselExampleIndicators" class="carousel slide"
+                data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                    <button
-                        type="button"
+                    <button type="button"
                         data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide-to="0"
-                        class="active"
-                        aria-current="true"
-                        aria-label="Slide 1"
-                    ></button>
-                    <button
-                        type="button"
+                        data-bs-slide-to="0" class="active" aria-current="true"
+                        aria-label="Slide 1"></button>
+                    <button type="button"
                         data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide-to="1"
-                        aria-label="Slide 2"
-                    ></button>
+                        data-bs-slide-to="1" aria-label="Slide 2"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -103,11 +77,9 @@
                             <div class="home-banner-text text-capitalize">
                                 <h1>Women</h1>
                                 <h2>52% Discount or this season</h2>
-                                <a
-                                    href="#!"
-                                    class="btn btn-danger text-uppercase mt-4"
-                                    >our products</a
-                                >
+                                <a href="#!"
+                                    class="btn btn-danger text-uppercase mt-4">our
+                                    products</a>
                             </div>
                         </div>
                     </div>
@@ -116,32 +88,24 @@
                             <div class="home-banner-text text-capitalize">
                                 <h1>E-Shop</h1>
                                 <h2>with working card & pay pal</h2>
-                                <a
-                                    href="#!"
-                                    class="btn btn-danger text-uppercase mt-4"
-                                    >our products</a
-                                >
+                                <a href="#!"
+                                    class="btn btn-danger text-uppercase mt-4">our
+                                    products</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <button
-                    class="carousel-control-prev"
-                    type="button"
+                <button class="carousel-control-prev" type="button"
                     data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev"
-                >
+                    data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true">
                         <i class="fa-solid fa-chevron-left slider-icon"></i>
                     </span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button
-                    class="carousel-control-next"
-                    type="button"
+                <button class="carousel-control-next" type="button"
                     data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next"
-                >
+                    data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true">
                         <i class="fa-solid fa-chevron-right slider-icon"></i>
                     </span>
@@ -150,6 +114,135 @@
             </div>
             <!-- ------------------------------------------------------------------- -->
         </section>
+        <!-- Offer section -->
+        <section class="offers">
+            <div class="container">
+                <div class="row">
+                    <!-- Offer box one  -->
+                    <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4">
+                        <a href="#!">
+                            <div class="offer-box text-center position-relative">
+                                <div class="offer-inner">
+                                    <div
+                                        class="offer-image position-relative overflow-hidden">
+                                        <img src="images/offer1.jpg"
+                                            class="img-fluid" alt />
+                                        <div class="offer-overlay"></div>
+                                    </div>
+                                    <div class="offer-info">
+                                        <div class="offer-info-inner">
+                                            <p class="heading-bigger">
+                                                sale 70%
+                                            </p>
+                                            <p
+                                                class="offer-title-1 text-uppercase font-weight-bold">
+                                                don't miss this chance
+                                            </p>
+                                            <button type="button"
+                                                class="btn btn-outline-danger text-uppercase mt-4">
+                                                shop now
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- Offer box 2 -->
+                    <div
+                        class="col-sm-6 col-lg-4 mb-lg-0 mb-4 d-flex flex-column justify-content-between">
+                        <a href="#!">
+                            <div
+                                class="offer-box text-center position-relative mb-4 mb-sm-0 mb-lg-0">
+                                <div class="offer-inner">
+                                    <div
+                                        class="offer-image position-relative overflow-hidden">
+                                        <img src="images/offer2.jpg"
+                                            class="img-fluid" alt />
+                                        <div class="offer-overlay"></div>
+                                    </div>
+                                    <div class="offer-info">
+                                        <div class="offer-info-inner">
+                                            <p class="heading-bigger">
+                                                sale 30%
+                                            </p>
+                                            <p
+                                                class="offer-title-1 text-uppercase font-weight-bold">
+                                                don't miss this chance
+                                            </p>
+                                            <button type="button"
+                                                class="btn btn-outline-danger text-uppercase mt-4">
+                                                shop now
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#!">
+                            <div
+                                class="offer-box text-center position-relative mb-4 mb-sm-0 mb-lg-0">
+                                <div class="offer-inner">
+                                    <div
+                                        class="offer-image position-relative overflow-hidden">
+                                        <img src="images/offer3.jpg"
+                                            class="img-fluid" alt />
+                                        <div class="offer-overlay"></div>
+                                    </div>
+                                    <div class="offer-info">
+                                        <div class="offer-info-inner">
+                                            <p class="heading-bigger">
+                                                sale 50%
+                                            </p>
+                                            <p
+                                                class="offer-title-1 text-uppercase font-weight-bold">
+                                                don't miss this chance
+                                            </p>
+                                            <button type="button"
+                                                class="btn btn-outline-danger text-uppercase mt-4">
+                                                shop now
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- Offer box 3 -->
+                    <!-- Offer box one  -->
+                    <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4">
+                        <a href="#!">
+                            <div class="offer-box text-center position-relative">
+                                <div class="offer-inner">
+                                    <div
+                                        class="offer-image position-relative overflow-hidden">
+                                        <img src="images/offer4.jpg"
+                                            class="img-fluid" alt />
+                                        <div class="offer-overlay"></div>
+                                    </div>
+                                    <div class="offer-info">
+                                        <div class="offer-info-inner">
+                                            <p class="heading-bigger">
+                                                sale 25%
+                                            </p>
+                                            <p
+                                                class="offer-title-1 text-uppercase font-weight-bold">
+                                                don't miss this chance
+                                            </p>
+                                            <button type="button"
+                                                class="btn btn-outline-danger text-uppercase mt-4">
+                                                shop now
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Products section -->
         <!-- Products section -->
 
         <!-- Special section -->
@@ -166,9 +259,9 @@
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
             integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-            crossorigin="anonymous"
-        ></script>
+            crossorigin="anonymous"></script>
         <!-- Main JS -->
         <script src="js/main.js"></script>
     </body>
+
 </html>
